--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "netlify deploy -p",
-    "postinstall": "husky install"
+    "deploy": "netlify deploy -p"
   },
   "eslintConfig": {
     "extends": [
